--- a/HTML-CSS-Mini-Course/Introduction-to-HTML-Lab/L1_01_Navigation-Bar/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-HTML-Lab/L1_01_Navigation-Bar/Solution/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Navigation Bar</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
