--- a/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_04_Reversed-List/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_04_Reversed-List/Solution/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Navigation Bar</title>
+    <title>Reversed List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h3>Grocery List</h3>
+    <ol reversed>
+        <li>Beverages: juice, coffee, soda, water</li>
+        <li>Snacks: chips, cookies, popcorn, nuts</li>
+        <li>Produce: apples, bananas, melons</li>
+        <li>Dairy: milk, eggs, cheese</li>
+    </ol>
 
 </body>
 </html>
