--- a/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_05_Table/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_05_Table/Solution/index.html
@@ -2,60 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Exam Results</title>
+    <title>Table</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>Daily Steps</h2>
     <table>
         <thead>
             <tr>
-                <th colspan="4">Web fundamentals exam result</th>
+                <th>Name</th>
+                <th>Number</th>
+                <th>Distance</th>
+                <th>Total</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>№</th>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Score</th>
+                <td>Suzie Q.</td>
+                <td>134</td>
+                <td>0.5 m</td>
+                <td>67.0 m</td>
             </tr>
             <tr>
-                <td>01</td>
-                <td>Gosho</td>
-                <td>Goshev</td>
-                <td>500</td>
+                <td>Jim D.</td>
+                <td>121</td>
+                <td>0.8 m</td>
+                <td>96.8 m</td>
             </tr>
             <tr>
-                <td>02</td>
-                <td>Tosho</td>
-                <td>Toshev</td>
-                <td>500</td>
+                <td>John P.</td>
+                <td colspan="3">Absent</td>
             </tr>
             <tr>
-                <td>03</td>
-                <td>Gencho</td>
-                <td>Genchev</td>
-                <td>500</td>
+                <td>Frank L.</td>
+                <td>218</td>
+                <td>0.6 m</td>
+                <td>130.8 m</td>
             </tr>
             <tr>
-                <td>04</td>
-                <td>Draga</td>
-                <td>Draganova</td>
-                <td>500</td>
+                <td>Sally B.</td>
+                <td>243</td>
+                <td rowspan="2">0.4 m</td>
+                <td>97.2 m</td>
             </tr>
             <tr>
-                <td>05</td>
-                <td>Gencho</td>
-                <td>Genchev</td>
-                <td>500</td>
+                <td>Susan F.</td>
+                <td>350</td>
+
+                <td>140.0 m</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="4">Average score from 05 participants:500</td>
+                <td colspan="3">Group Total:</td>
+                <td>671.8 m</td>
             </tr>
         </tfoot>
     </table>
 
 </body>
 </html>
+
+
