--- a/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_03_Description-List/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_03_Description-List/Solution/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Navigation Bar</title>
+    <title>Description List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1>Languages</h1>
+    <dl>
+        <dt>HTML<dd>Is a markup language</dd></dt>
+        <dt>Java<dd>Is a programming language and platform</dd></dd>
+        <dt>JavaScript<dd>Is a scripting language</dd></dt>
+    </dl>
 </body>
 </html>
