--- a/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -32,17 +32,33 @@
 
   <main>
     <section id="contacts">
-      PAUL ROSSI
-web developer
-photographer
-soccer fan
-father ot two
-&copy Rossi, 2015. All rights reserved
+      <h2>PAUL ROSSI</h2>
+      <p>web developer</p>
+      <p>photographer</p>
+      <p>soccer fan</p>
+      <p>father ot two</p>
+      <div id="social-media">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+      </div>
+      <p class="footer">&copy Rossi, 2015. All rights reserved</p>
 
     </section>
     <section id="about">
-      SAVVY. CREATIVE. DETERMINED.
-While I specialize in front-end development and WordPress, I now also do a lot of work in mobile web and responsive development.
+      <article>
+        <h2>SAVVY.</h2>
+        <h2>CREATIVE.</h2>
+        <h2>DETERMINED.</h2>
+        <p>I'm a freelance web developer based in Santa Monica, California. I've been in business since 2006 and work mainly with design agencies.</p>
+        <p>While I specialize in front-end development and WordPress, I now also do a lot of work in mobile web and responsive development.</p>
+      </article>
+      <article>
+        <img src="thinking-man.png" alt="thinking-man">
+      </article>
+
 
     </section>
 
