--- a/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <script src="https://kit.fontawesome.com/a9f18534d3.js" crossorigin="anonymous"></script>
+<!--    <script src="https://kit.fontawesome.com/a9f18534d3.js" crossorigin="anonymous"></script>-->
+    <script src="font-awesome.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
