--- a/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <script src="https://kit.fontawesome.com/a9f18534d3.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet" type="text/css">
+<!--    <script src="https://kit.fontawesome.com/a9f18534d3.js" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
