landing page init

--- a/HTML-CSS-Mini-Course/Landing Page/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Landing Page/Solution/index.html
@@ -27,10 +27,24 @@
                 <li>
                     <a href="#">CONTACT US</a>
                 </li>
+                <li>
+                    <ul class="social">
+                        <li>
+                            <i class="fa-brands fa-square-facebook"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-instagram"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-twitter"></i>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <section class="header">
-
+            <h1>a comfort corner for you child</h1>
+            <button type="submit">LEARN MORE</button>
         </section>
     </header>
 
@@ -57,8 +71,8 @@
 
 
 
-a comfort corner for you child
-LEARN MORE
+
+
 Welcome to Kids Corner
 The Heart’s Kids Club provides lots of fun activities with an educational twist. Kids can join for free
 and will receive a goody bag and a membership card on induction. Each workshop will be interactive,
