landing page final

--- a/HTML-CSS-Mini-Course/Landing Page/Solution/index.html
+++ b/HTML-CSS-Mini-Course/Landing Page/Solution/index.html
@@ -9,39 +9,41 @@
 </head>
 <body>
     <header>
-        <p>kids<span>c<i class="fa-solid fa-futbol"></i>rner</span></p>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">ABOUT US</a>
-                </li>
-                <li>
-                    <a href="#">OFFERINGS</a>
-                </li>
-                <li>
-                    <a href="#">CAMPS</a>
-                </li>
-                <li>
-                    <a href="#">BLOG</a>
-                </li>
-                <li>
-                    <a href="#">CONTACT US</a>
-                </li>
-                <li>
-                    <ul class="social">
-                        <li>
-                            <i class="fa-brands fa-square-facebook"></i>
-                        </li>
-                        <li>
-                            <i class="fa-brands fa-instagram"></i>
-                        </li>
-                        <li>
-                            <i class="fa-brands fa-twitter"></i>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <section class="nav">
+            <p>kids<span>c<i class="fa-solid fa-futbol"></i>rner</span></p>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">ABOUT US</a>
+                    </li>
+                    <li>
+                        <a href="#">OFFERINGS</a>
+                    </li>
+                    <li>
+                        <a href="#">CAMPS</a>
+                    </li>
+                    <li>
+                        <a href="#">BLOG</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACT US</a>
+                    </li>
+                    <li>
+                        <ul class="social">
+                            <li>
+                                <a href="http://facebook.com"><i class="fa-brands fa-square-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </section>
         <section class="header">
             <h1>a comfort corner for you child</h1>
             <button type="submit">LEARN MORE</button>
@@ -49,18 +51,113 @@
     </header>
 
     <main>
-        <section class="upper">
+        <section id="upper">
+            <h2>Welcome to Kids Corner</h2>
+            <p>The Heart’s Kids Club provides lots of fun activities with an educational twist. Kids can join for free
+and will receive a goody bag and a membership card on induction. Each workshop will be interactive,
+educational, and will introduce children to important concepts that they will really enjoy. Children
+must be accompanied by a responsible adult at all times and workshop places are available on a first
+come, first served basis.
+            </p>
+            <p>If you are parent looking for a place where your child will grow the best, look further, <a href="#">talk to us now</a>.</p>
+        </section>
+
+        <section id="middle">
+            <h2>Our offerings</h2>
+            <article>
+                <img src="../Requirements-and-Resources/Images/backpack.png" alt="backpack">
+                <h4>School Pickups</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
+            <article>
+                <img src="../Requirements-and-Resources/Images/books.png" alt="books">
+                <h4>Extensive Library</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
+            <article>
+                <img src="../Requirements-and-Resources/Images/bus.png" alt="bus">
+                <h4>Outdoor Trips</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
+            <article>
+                <img src="../Requirements-and-Resources/Images/sandwich.png" alt="sandwich">
+                <h4>Healthy Food</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
+            <article>
+                <img src="../Requirements-and-Resources/Images/first-aid-kit.png" alt="first-aid-kit">
+                <h4>First Aid Services</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
+            <article>
+                <img src="../Requirements-and-Resources/Images/plan.png" alt="plan">
+                <h4>Games and Аctivities</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </article>
 
         </section>
 
-        <section class="lower">
+        <section id="lower">
+            <h2>Upcoming CAMPS</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+            <article>
+                <img src="../Requirements-and-Resources/Images/photo-kids-playing-football.jpg" alt="kids-playing-football">
+                <div class="camp-info">
+                    <div class="camp-info-left">
+                        <p class="camp-info-upper-left">Soccer Camp</p>
+                        <p class="camp-info-lower-left">15h February 2019</p>
+                    </div>
+                    <div class="camp-info-right">$35</div>
+                </div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <button>ENROLL TODAY</button>
+            </article>
+
+            <article>
+                <img src="../Requirements-and-Resources/Images/swimming-pool.jpeg" alt="swimming-pool">
+                <div class="camp-info">
+                    <div class="camp-info-left">
+                        <p class="camp-info-upper-left">Soccer Camp</p>
+                        <p class="camp-info-lower-left">15h February 2019</p>
+                    </div>
+                    <div class="camp-info-right">$35</div>
+                </div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <button>ENROLL TODAY</button>
+            </article>
+
+            <article>
+                <img src="../Requirements-and-Resources/Images/kids_dogs_playing.jpg" alt="kids_dogs_playing">
+                <div class="camp-info">
+                    <div class="camp-info-left">
+                        <p class="camp-info-upper-left">Soccer Camp</p>
+                        <p class="camp-info-lower-left">15h February 2019</p>
+                    </div>
+                    <div class="camp-info-right">$35</div>
+                </div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <button>ENROLL TODAY</button>
+            </article>
 
 
         </section>
 
     </main>
     <footer>
+        <p>CopyRight 2014. All Rights Reserved.</p>
 
+        <ul class="social">
+            <li>
+                <a href="http://facebook.com"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
     </footer>
 
 </body>
@@ -71,43 +168,3 @@
 
 
 
-
-
-Welcome to Kids Corner
-The Heart’s Kids Club provides lots of fun activities with an educational twist. Kids can join for free
-and will receive a goody bag and a membership card on induction. Each workshop will be interactive,
-educational, and will introduce children to important concepts that they will really enjoy. Children
-must be accompanied by a responsible adult at all times and workshop places are available on a first
-come, first served basis.
-If you are parent looking for a place where your child will grow the best, look further, talk to us now.
-Our offerings
-School Pickups
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Extensive Library
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Outdoor Trips
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Healthy Food
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-First Aid Services
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Games and Аctivities
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Upcoming CAMPS
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-Soccer Camp
-15h February 2019
-$35
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-ENROLL TODAY
-Soccer Camp
-15h February 2019
-$35
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-ENROLL TODAY
-Soccer Camp
-15h February 2019
-$35
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-ENROLL TODAY
-CopyRight 2014. All Rights Reserved.
