--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -10,36 +10,36 @@
     <section>
         <div>
             <artcle>
-                <h2></h2>
+                <h2>Hawk Twah</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
             <artcle>
-                <h2></h2>
-                <p></p>
-                <img src="" alt="">
-            </artcle>
-        </div>
-        <div>
-            <artcle>
-                <h2></h2>
-                <p></p>
-                <img src="" alt="">
-            </artcle>
-            <artcle>
-                <h2></h2>
+                <h2>Spit on that</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
         </div>
         <div>
             <artcle>
-                <h2></h2>
+                <h2>Hawk Twah</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
             <artcle>
-                <h2></h2>
+                <h2>Spit on that</h2>
+                <p></p>
+                <img src="" alt="">
+            </artcle>
+        </div>
+        <div>
+            <artcle>
+                <h2>Hawk Twah</h2>
+                <p></p>
+                <img src="" alt="">
+            </artcle>
+            <artcle>
+                <h2>Spit on that</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
