--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -10,12 +10,12 @@
     <section>
         <div>
             <artcle>
-                <h2></h2>
+                <h2>A Problem!</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
             <artcle>
-                <h2></h2>
+                <h2>There is no Hawk here</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
