--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -12,7 +12,7 @@
             <artcle>
                 <h2>Merge Conflict Resolved</h2>
 
-                <p></p>
+                <p>How fast can you pull?</p>
                 <img src="" alt="">
             </artcle>
             <artcle>
