--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -23,7 +23,7 @@
         </div>
         <div>
             <artcle>
-                <h2>Hawk Twah</h2>
+                <h2>Teest</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
