--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -28,7 +28,7 @@
                 <img src="" alt="">
             </artcle>
             <artcle>
-                <h2>Spit on that</h2>
+                <h2>Asdasdasd</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
