--- a/HTML-CSS-Mini-Course/html_file.html
+++ b/HTML-CSS-Mini-Course/html_file.html
@@ -35,7 +35,7 @@
         </div>
         <div>
             <artcle>
-                <h2>Hawk Twah</h2>
+                <h2>Proba Proba kasna doba</h2>
                 <p></p>
                 <img src="" alt="">
             </artcle>
